--- a/aula06/ex002.html
+++ b/aula06/ex002.html
@@ -7,8 +7,7 @@
     <title>Meu primeiro programa</title>
     <style>
         body {
-            background-color: rgba(96, 229, 247, 0.555);
-            color: white;
+            background-color: rgba(96, 229, 247, 0.342);
             font-family: Arial, Helvetica, sans-serif;
         }
         h1 {
@@ -20,9 +19,8 @@
     <h1>Olá, mundo!</h1>
     <p>Já me livrei da maldição</p>
     <script>
-        window.alert('Minha primeira mensagem!')
-        window.confirm('Esta gostando de JS?')
-        window.prompt('Qual éo seu nome?')
+        var nome = window.prompt('Qual é o seu nome?')/*Vai perguntar o nome*/
+        window.alert('É um grande prazer em te conhecer, ' + nome + '!')// '+' = Concatenação 
     </script>
 </body>
 </html>
