--- a/aula14ex/ex017/modelo.html
+++ b/aula14ex/ex017/modelo.html
@@ -9,14 +9,16 @@
 </head>
 <body>
     <header>
-        <h1>Modelo</h1>
+        <h1>Tabuada</h1>
     </header>
     <section>
-        <div>
-            
+        <div id="+">
+            <p>Número: <input type="number" name="num" id="txtn"> <input type="button" value="Gerar Tabuada" onclick="tabuada()"></p>
         </div>
-        <div>
-            
+        <div id="res">
+            <select name="tabuada" id="seltab" size="10">
+                <option>Digite um número acima:</option>
+            </select>
         </div>
     </section>
     <footer>
